# UipathDocumentGenerator

./: README.md
uipathdocumentgenerator/: README.md  SDD.md  pyproject.toml  report.md
uipathdocumentgenerator/db/: chroma.sqlite3
uipathdocumentgenerator/src/uipathdocumentgenerator/: crew.py  main.py
uipathdocumentgenerator/src/uipathdocumentgenerator/config/: agents.yaml  tasks.yaml
