[project]
name = "uipathdocumentgenerator"
version = "0.1.0"
description = "UipathDocumentGenerator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
uipathdocumentgenerator = "uipathdocumentgenerator.main:run"
run_crew = "uipathdocumentgenerator.main:run"
train = "uipathdocumentgenerator.main:train"
replay = "uipathdocumentgenerator.main:replay"
test = "uipathdocumentgenerator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
